--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "stream": "0.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-motion": "0.0.32"
+    "@types/react-motion": "0.0.32",
+    "@types/uuid": "^8.3.4"
   }
 }
